--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
@@ -13,6 +14,13 @@ body {
     align-items: center;
     font-family: Arial, Helvetica, sans-serif;
     position: relative;
+    overflow: hidden;
+}
+
+@media (max-width: 768px) {
+    body {
+        padding-top: 50px;
+    }
 }
 
 td {
@@ -26,6 +34,7 @@ td {
 h1{
     color: white;
     text-align: center;
+
 }
 
 .player{
@@ -46,6 +55,10 @@ h1{
     padding: 10px;
     align-items: center;
     border-radius: 7px;
+}
+
+.playersMid {
+    margin: 0 20px 0 20px;
 }
 
 button{
@@ -87,16 +100,6 @@ button:hover{
     background-color: rgba(0, 0, 0, .9);
     border-radius: 12px;
     padding: 20px;
-}
-
-.blanket {
-    background: transparent;
-    width: 29%;
-    height: 24rem;
-    position: absolute;
-    z-index: 50;
-    border-radius: 12px;
-    display: none;
 }
 
 .close{
@@ -150,22 +153,15 @@ button:hover{
     display: none;
 }
 
-.whichPlayer{
-    position: absolute;
-    top: 270px;
-    left: 50px;
-    width: 20%;
+.whichPlayer {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border: white solid 2px;
-    padding: 20px;
-    border-radius: 15px;
-    background-color: rgba(255, 255, 255, .7);
-    height: 100px;
-    font-size: 20px;
-    font-weight: 700;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border: white solid 2px;
+        border-radius: 15px;
+        background-color: rgba(255, 255, 255, .7);
+        text-align: center;
 }
 
 .close {
@@ -179,6 +175,16 @@ button:hover{
     position: absolute;
     right: 10px;
     top: 10px;
+}
+
+.next {
+    font-weight: 900; 
+    height: 50px; 
+    width: 50px; 
+    padding: 0px; 
+    display: flex; 
+    justify-content: center; 
+    align-items: center;
 }
 
 .input2Btn{
@@ -236,4 +242,67 @@ input{
     border-right: 4px solid white;
 }
 .box:nth-child(9) {
+}
+
+
+@media screen and (max-width: 768px) {
+    .box {
+        width: 6rem;
+        height: 6rem;
+        font-size: 70px;
+    }
+
+    .playername {
+        font-size: 20px;
+        margin: 20px 0 20px 0;
+    }
+
+    .resultModal {
+        width: 75%;
+        font-size: 20px;
+        margin-top: 70px;
+        margin-left: 10px;  
+    }
+
+    .whichPlayer {
+        width: 40%;
+        padding: 10px;
+        border: 2px solid red;
+    }
+
+    .inputModal {
+        width: 80%;
+        margin-top: 20px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .player {
+        position: absolute;
+        left: 50px;
+        top: 30px;
+    }
+
+    main {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        height: 100vh;
+    }
+
+    h1 {
+        margin-bottom: 60px;
+    }
+
+    .whichPlayer{
+        position: absolute;
+        top: 270px;
+        left: 50px;
+        width: 26%;
+        padding: 20px;
+        border-radius: 15px;
+        height: 100px;
+        font-size: 20px;
+        font-weight: 700;
+    }
 }
