--- a/style.css
+++ b/style.css
@@ -213,6 +213,38 @@ input{
     font-size: 15px;
 }
 
+.buffer {
+    position: absolute;
+    width: 20%;
+    height: 10rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px;
+    top: 250px;
+    margin-left: 50px;
+    background-color: rgba(32, 30, 30, 0.603);
+    display: none;
+}
+
+.back {
+    position: absolute;
+    top: 45px;
+    left: 20px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 1px red solid;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: aliceblue;
+    text-transform: capitalize;
+    font-weight: 900;
+    text-decoration: none;
+}
+
+
 .box:nth-child(1) {
     border-right: 4px solid white;
     border-bottom:  4px solid white;
@@ -274,6 +306,11 @@ input{
         width: 80%;
         margin-top: 20px;
     }
+
+    .buffer {
+        width: 50%;
+        margin-top: 100px;
+    }
 }
 
 @media screen and (min-width: 768px) {
@@ -305,4 +342,42 @@ input{
         font-size: 20px;
         font-weight: 700;
     }
+
+    .back {
+        top: 20px;
+        left: 50px;
+    }
+}
+
+.gameBtns {
+    width: 45%;
+    height: 4rem;
+    font-weight: 900;
+    font-size: 19px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.gamePlayPanel {
+    width: 80%;
+    height: 100vh;
+    padding: 0px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.gameBtn1, .gameBtn2 {
+    display: flex;
+    margin-top: 50px;
+}
+
+.gamePlayPanel h1 {
+    font-size: 45px;
+}
+
+#twoplayers, #easy {
+    margin-right: 10px;
 }
