--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     position: relative;
     overflow: hidden;
+    background-position: center;
 }
 
 @media (max-width: 768px) {
